--- a/app/src/main/res/layout/fragment_event_calification.xml
+++ b/app/src/main/res/layout/fragment_event_calification.xml
@@ -5,10 +5,10 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/buto"
+        android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="SOY GALLERY"
+        android:text="SOY CALIFICACION STARS"
         android:textColor="@color/primary_dark" />
 </LinearLayout>
