--- a/app/src/main/res/layout/fragment_pictures_photo.xml
+++ b/app/src/main/res/layout/fragment_pictures_photo.xml
@@ -4,11 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+
+
     <TextView
         android:id="@+id/camara"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
         android:text="TOMARE LAS FOTOS"
         android:textColor="@color/primary_dark" />
+    <ImageView
+        android:id="@+id/imageCaptured"
+        android:layout_width="match_parent"
+        android:layout_height="300dp" />
 </LinearLayout>
