--- a/app/src/main/res/drawable/button_standar_other.xml
+++ b/app/src/main/res/drawable/button_standar_other.xml
@@ -2,19 +2,19 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/primary_dark" />
+            <solid android:color="@color/orange" />
             <corners android:bottomLeftRadius="6dp" android:bottomRightRadius="6dp" android:topLeftRadius="6dp" android:topRightRadius="6dp" />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape>
-            <solid android:color="@color/primary_dark" />
+            <solid android:color="@color/orange" />
             <corners android:bottomLeftRadius="6dp" android:bottomRightRadius="6dp" android:topLeftRadius="6dp" android:topRightRadius="6dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <solid android:color="@color/primary_dark" />
+            <solid android:color="@color/orange" />
             <corners android:bottomLeftRadius="6dp" android:bottomRightRadius="6dp" android:topLeftRadius="6dp" android:topRightRadius="6dp" />
         </shape>
     </item>
