--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -127,7 +127,7 @@
 
 
         <Button
-            android:id="@+id/btn_register"
+            android:id="@+id/btn_continue_photo"
             style="@style/Widget.Button.Standar"
             android:layout_width="match_parent"
             android:layout_height="55dp"
