--- a/app/src/main/res/layout/card_view_item_list.xml
+++ b/app/src/main/res/layout/card_view_item_list.xml
@@ -1,63 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:layout_margin="6dp"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="6dp"
+    android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="2dp">
 
-            <RelativeLayout
+    <RelativeLayout
 
-                android:layout_width="match_parent"
-                android:layout_height="150dp">
+        android:layout_width="match_parent"
+        android:layout_height="150dp">
 
 
-                            <TextView
+        <TextView
 
-                                android:paddingLeft="10dp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAppearance="?android:attr/textAppearanceLarge"
-                                android:text="Colonia Juárez 24 julio 16:00"
-                                android:layout_marginRight="5dp"
-                                android:textSize="12sp"
-                                android:id="@+id/name"
-                                android:textColor="@color/item_selector_drawer"
-                                android:layout_gravity="center"
-                                android:layout_alignParentTop="true"
-                                android:layout_alignParentRight="true"
-                                android:layout_alignParentEnd="true"
-                                android:layout_marginTop="31dp" />
+            android:id="@+id/calification_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="31dp"
+            android:paddingLeft="10dp"
+            android:text="Colonia Juárez 24 julio 16:00"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/item_selector_drawer"
+            android:textSize="12sp" />
 
-                            <TextView
-                                android:paddingLeft="10dp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Atención a consumidores problematicos"
-                                android:textSize="16sp"
-                                android:id="@+id/comunity"
-                                android:textColor="@color/item_selector_drawer"
-                                android:layout_centerVertical="true"
-                                android:layout_alignParentLeft="true"
-                                android:layout_alignParentStart="true" />
+        <TextView
+            android:id="@+id/comunity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:paddingLeft="10dp"
+            android:text="Atención a consumidores problematicos"
+            android:textColor="@color/item_selector_drawer"
+            android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/texto"
-                    android:paddingLeft="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/lorem"
-                    android:textSize="16sp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/item_selector_drawer"
-                    android:layout_below="@+id/comunity"
-                    android:layout_alignRight="@+id/name"
-                    android:layout_alignEnd="@+id/name" />
+        <TextView
+            android:id="@+id/texto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/calification_txt"
+            android:layout_alignRight="@+id/calification_txt"
+            android:layout_below="@+id/comunity"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="10dp"
+            android:text="@string/lorem"
+            android:textColor="@color/item_selector_drawer"
+            android:textSize="16sp" />
 
-            </RelativeLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
