--- a/app/src/main/res/layout/fragment_event_calification.xml
+++ b/app/src/main/res/layout/fragment_event_calification.xml
@@ -1,20 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/recycle_events_background"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="SOY CALIFICACION STARS"
-        android:textColor="@color/primary_dark" />
+        android:layout_width="fill_parent"
+        android:layout_height="220dp"
+        android:background="@color/primary"
+        android:gravity="center" />
 
-    <RatingBar
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ratingBar"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        android:layout_gravity="right"
+        android:layout_margin="10dp"
+        android:text="2 de 4"
+        android:textSize="15sp"
+        android:textColor="@color/white"
+        android:gravity="center" />
+
+
+    <android.support.v7.widget.CardView
+
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="120dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardCornerRadius="2dp">
+
+        <RelativeLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:text="En una escala del 1 al 5"
+                android:textColor="@color/disable_black"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/calification_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView3"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="@string/calification_event"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/disable_black"
+                android:textSize="20sp" />
+
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/calification_txt"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:progressDrawable="@drawable/rating_bar_custom" />
+
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/ic_table" />
+
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_continue_calification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginTop="49dp"
+        android:layout_marginRight="10dp"
+
+        fab:fab_colorNormal="@color/orange"
+        fab:fab_colorPressed="@color/orange"
+        fab:fab_icon="@drawable/ic_go"
+        fab:fab_plusIconColor="@color/white"
+   />
+
+
+
+
+</FrameLayout>
