--- a/app/src/main/res/layout/fragment_pictures_evidence.xml
+++ b/app/src/main/res/layout/fragment_pictures_evidence.xml
@@ -13,6 +13,16 @@
         android:background="@color/primary"
         android:gravity="center" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="10dp"
+        android:text="1 de 4"
+        android:textSize="15sp"
+        android:textColor="@color/white"
+        android:gravity="center" />
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -100,7 +110,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/imageView3"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="49dp"
             fab:fab_colorNormal="@color/accent"
             fab:fab_colorPressed="@color/accent"
             fab:fab_icon="@drawable/ic_camara"
