--- a/app/src/main/res/layout/fragment_demo_item.xml
+++ b/app/src/main/res/layout/fragment_demo_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:gravity="center|bottom"
     android:background="@color/transparent"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
@@ -11,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/lorem"
@@ -22,10 +23,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/lorem"
         android:layout_marginTop="10dp"
         android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:id="@+id/text_view_sub_title" />
+
 </LinearLayout>
