--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/catedral"
+    android:background="@drawable/metr"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingLeft="@dimen/margin_left_login"
@@ -19,6 +19,7 @@
 
 
         <ImageView
+            android:id="@+id/pruebas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="60dp"
