--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/angelillo"
+    android:background="@drawable/angel"
     android:orientation="vertical"
     tools:context="la.opi.verificacionciudadana.activities.SignUp">
 
