--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,9 +1,18 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="@dimen/navigation_drawer_width"
     android:layout_height="match_parent"
-    android:background="@color/item_selector_drawer"
-    android:choiceMode="singleChoice"
-    android:divider="@android:color/transparent"
-    android:dividerHeight="0dp"
-    tools:context=".NavigationDrawerFragment" />
+    android:background="@color/white"
+    tools:context="materialdesign.gdg.androidtitlan.androidtitlan_materialdesign.drawer.NavigationDrawerFragment">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/RecyclerView"
+        android:layout_width="@dimen/navigation_drawer_width"
+        android:layout_height="match_parent"/>
+
+</RelativeLayout>
+
+
+
+
+
