--- a/app/src/main/res/layout/item_navigation_drawer.xml
+++ b/app/src/main/res/layout/item_navigation_drawer.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="23dp"
-        android:textColor="@color/white"
+        android:textColor="@color/font_color_app"
         android:textSize="14sp"
         android:text="dgfhj"
         tools:ignore="RtlHardcoded,RtlSymmetry" />
