--- a/app/src/main/res/layout/item_spinner_mexico.xml
+++ b/app/src/main/res/layout/item_spinner_mexico.xml
@@ -14,7 +14,7 @@
         android:fontFamily="sans-serif"
         android:paddingLeft="16dp"
         android:paddingRight="4dp"
-        android:textColor="@color/black_two"
+        android:textColor="@color/font_color_app"
         android:textAppearance="?android:textAppearanceSmallPopupMenu"
       />
 
