--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
+
         android:id="@+id/action_demo"
         android:title="@string/menu_show_demo"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        />
     <item
         android:id="@+id/action_close_sesion"
         android:orderInCategory="100"
         android:title="@string/menu_close_sesion"
         app:showAsAction="never" />
+
 </menu>
