--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,21 +10,20 @@
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
-        <item name="android:textColorSecondary">@color/white</item>
-        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/font_color_app</item>
+        <item name="android:textColorPrimary">@color/font_color_app</item>
         <item name="colorControlNormal">@color/accent</item>
         <item name="colorControlActivated">@color/primary</item>
         <item name="colorControlHighlight">@color/primary</item>
+
         <!--<item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>-->
         <!--<item name="actionBarTheme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>-->
     </style>
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
-        <item name="color">@color/toolbar_register_text</item>
+        <item name="color">@color/color_control_app</item>
     </style>
-
-
 
 
     <!-- ToolBar -->
@@ -55,12 +54,24 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Widget.Button.Application" parent="android:Widget">
+        <item name="android:gravity">center_vertical|center_horizontal</item>
+        <item name="android:background">@drawable/button_save_preferences</item>
+        <item name="android:textAppearance">?android:textAppearanceMedium</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="Widget.EditText.Login" parent="android:Widget">
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
-        <item name="android:textColor">@color/black_two</item>
+        <item name="android:textColor">@color/font_color_app</item>
         <item name="android:textColorHint">@color/accent</item>
 
     </style>
 
+
+    <style name="myCustomMenuTextApearance" parent="@android:style/TextAppearance.Widget.IconMenu.Item">
+        <item name="android:textColor">@color/font_color_app</item>
+    </style>
 
 </resources>
