--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="25dp"
         android:minHeight="?attr/actionBarSize"
         android:background="@android:color/transparent"
-        app:theme="@style/Rushmore.Toolbar.Transparent">
+        app:theme="@style/Erik.Toolbar.Transparent">
     </android.support.v7.widget.Toolbar>
     <View
         android:id="@+id/statusBarBackground"
