--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,16 +81,16 @@
             android:id="@+id/btn_login"
             style="@style/Widget.Button.Standar"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="50dp"
             android:layout_marginTop="15dp"
             android:text="@string/button_session" />
 
 
         <Button
-            android:id="@+id/btn_continue_photo"
+            android:id="@+id/btn_send_evidences"
             style="@style/Widget.Button.Standar"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="50dp"
             android:layout_marginTop="5dp"
             android:text="@string/button_register" />
 
