--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="25dp"
         android:background="@android:color/transparent"
         android:minHeight="?attr/actionBarSize"
-        app:theme="@style/Rushmore.Toolbar.Transparent"/>
+        app:theme="@style/Erik.Toolbar.Transparent"/>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
