--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -5,13 +5,17 @@
     android:background="@color/recycle_events_background"
     android:orientation="vertical">
 
+
     <GridView
-        android:id="@+id/gridview_gallery"
-        android:gravity="center"
-        android:layout_width="wrap_content"
+        android:id="@+id/gridView"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="2">
-
-    </GridView>
-
+        android:layout_below="@id/toolbar"
+        android:padding="4dp"
+        android:clipToPadding="false"
+        android:columnWidth="@dimen/item_width"
+        android:numColumns="auto_fit"
+        android:horizontalSpacing="4dp"
+        android:verticalSpacing="4dp"
+        android:stretchMode="columnWidth"/>
 </LinearLayout>
