--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,8 @@
 
     <dimen name="padding_edt">15dp</dimen>
     <dimen name="corner_radius">3dp</dimen>
+
+    <dimen name="item_width">192dp</dimen>
+    <dimen name="item_height">192dp</dimen>
+    <dimen name="spacing_large">16dp</dimen>
 </resources>
