--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -158,7 +158,7 @@
             android:layout_height="50dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
-            android:text="@string/button_register_sing_up" />
+            android:text="@string/button_register" />
 
 
     </LinearLayout>
