--- a/app/src/main/res/menu/menu_login.xml
+++ b/app/src/main/res/menu/menu_login.xml
@@ -1,7 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="la.opi.verificacionciudadana.activities.LoginActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    tools:context="la.opi.verificacionciudadana.activities.LoginScreenActivity">
+    <item
+        android:id="@+id/tutorial"
+        android:orderInCategory="100"
+        android:title="@string/tutorial_menu"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/help"
+        android:orderInCategory="100"
+        android:title="@string/tutorial_menu_two"
+        app:showAsAction="never" />
 </menu>
